--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,12 @@ html, body {
   -moz-box-shadow: -5px 7px 5px rgba(0, 0, 0, 0.8);
   box-shadow: -5px 7px 5px rgba(0, 0, 0, 0.8);
 }
-
+.text-color-a{
+    color: rgba(0, 0, 0, .68) !important;
+}
+.topMargin10{
+margin-top:10px;
+}
 .foldtr:before {
   content: "";
   position: absolute;
@@ -508,7 +513,7 @@ color: white;
 .border-team.card-success-stories {
   border: 1px solid #d3d3d3 !important;
   padding: 1em;
-  height: 16em;
+  height: 18em;
 }
 
 img[src="images/Bullet-blue.png"] {
