--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -247,12 +247,12 @@ ul.lines-of-business li > a.lob4{
 .ors4{background-image:url('../images/01b-Expertise.png');}
 .ors5{background-image:url('../images/01d-Expertise.png');}
 
-.uiicon1{background-image:url('../images/11-UIUX/experts.png');}
-.uiicon2{background-image:url('../images/11-UIUX/frontend.png');}
-.uiicon3{background-image:url('../images/11-UIUX/optimization.png');}
+.uiicon1{background-image:url('../images/11-UIUX/technology.png');}
+.uiicon2{background-image:url('../images/11-UIUX/technology.png');}
+.uiicon3{background-image:url('../images/11-UIUX/frontend.png');}
 .uiicon4{background-image:url('../images/11-UIUX/caching.png');}
 
-.uxicon1{background-image:url('../images/11-UIUX/frontend.png');}
+.uxicon1{background-image:url('../images/11-UIUX/experts.png');}
 .uxicon2{background-image:url('../images/11-UIUX/modernization.png');}
 .uxicon3{background-image:url('../images/11-UIUX/interaction.png');}
 .uxicon4{background-image:url('../images/11-UIUX/usability.png');}
